--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TechChallenge_Fase4.API
 spring.datasource.url=jdbc:mysql://fiap-postechdb05.mysql.database.azure.com:3306/avaliacoesdb?sslMode=REQUIRED
-spring.datasource.username=azureuser@fiap-postechdb05
+spring.datasource.username=azureuser
 spring.datasource.password=Teste123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
