--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=TechChallenge_Fase4.API
-spring.datasource.url=jdbc:mysql://fiap-postechdb05.mysql.database.azure.com:3306/avaliacoesdb?useSSL=true&requireSSL=true&verifyServerCertificate=false&serverTimezone=UTC
 
+spring.datasource.url=jdbc:mysql://fiap-postechdb05.mysql.database.azure.com:3306/avaliacoesdb?sslMode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
 spring.datasource.username=azureuser
 spring.datasource.password=Teste123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 server.port=8080
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
